--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Tests
+name: Flutter
 
 on:
   push:
@@ -25,3 +25,4 @@ jobs:
         flutter-version: '2.0.5'
     - run: flutter pub get
     - run: flutter test
+    - run: flutter build web
