ci(build): add build web
Closes #22

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -26,4 +26,4 @@ jobs:
     - run: flutter pub get
     - run: flutter test
     - run: flutter build web --release
-    - run: cp -rf ./build/web ./docs
+    - run: ls -la ./build/web
