--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   path_provider: 2.0.4
   localstore: 1.2.0
+  flutter_map: ^0.14.0
 
 dev_dependencies:
   flutter_test:
