--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   path_provider: 2.0.4
   localstore: 1.2.0
   flutter_map: ^0.14.0
+  geocoder: ^0.2.1
 
 dev_dependencies:
   flutter_test:
