--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  path_provider: 2.0.4
-  localstore: 1.2.0
+  path_provider: ^2.0.7
+  localstore: ^1.2.1
   flutter_map: ^0.14.0
 
 dev_dependencies:
