--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  path_provider: ^2.0.7
-  localstore: ^1.2.1
+  cupertino_icons:
+  path_provider:
+  localstore:
   flutter_map:
 
 dev_dependencies:
